--- a/themes/hugo-bootstrap/layouts/404.html
+++ b/themes/hugo-bootstrap/layouts/404.html
@@ -10,10 +10,10 @@
 	<title>404 Page not Found</title>
 
 	<!-- Google font -->
-	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,700" rel="stylesheet">
+	<link href="https://fonts.loli.net/css?family=Montserrat:300,700" rel="stylesheet">
 
 	<!-- Custom stlylesheet -->
-	<link type="text/css" rel="stylesheet" href="css/404style.css" />
+	<link type="text/css" rel="stylesheet" href="{{ .Site.BaseURL | relLangURL }}/css/404style.css" />
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
