--- a/themes/hugo-bootstrap/static/css/404style.css
+++ b/themes/hugo-bootstrap/static/css/404style.css
@@ -45,7 +45,7 @@ body {
   display: inline-block;
   width: 120px;
   height: 120px;
-  background-image: url('../img/emoji.png');
+  background-image: url('../img/emoji.svg');
   background-size: cover;
   -webkit-transform: scale(1.4);
       -ms-transform: scale(1.4);
