--- a/layouts/partials/brand.html
+++ b/layouts/partials/brand.html
@@ -1,3 +1,3 @@
-<img src="https://vitoho.ml/logo.png" width="30" height="30" class="d-inline-block align-top"
+<img src="https://vitoho.ml/logo.svg" width="30" height="30" class="d-inline-block align-top"
     alt="">
 {{ .Site.Title }}
