--- a/themes/hugo-bootstrap/layouts/404.html
+++ b/themes/hugo-bootstrap/layouts/404.html
@@ -33,7 +33,7 @@
 			</div>
 			<h2>Oops! Page Not Be Found</h2>
 			<p>Sorry but the page you are looking for does not exist, have been removed. name changed or is temporarily unavailable</p>
-			<a href="{{ .Site.BaseURL | absLangURL }}">Back to homepage</a>
+			<a href="{{  | absLangURL }}">Back to homepage</a>
 		</div>
 	</div>
 
