--- a/themes/hugo-bootstrap/layouts/partials/footer.html
+++ b/themes/hugo-bootstrap/layouts/partials/footer.html
@@ -1,5 +1,6 @@
 {{ $Xzya := "<a href=\"https://github.com/Xzya\">Xzya</a>" }}
 {{ $HugoThemeBootstrap4Blog := "<a href=\"https://github.com/alanorth/hugo-theme-bootstrap4-blog\">hugo-theme-bootstrap4-blog</a>" }}
+{{ $Hugo :="<a href=\"https://gohugo.io">Hugo</a>"}}
 {{ $links := (dict "Xzya" $Xzya "HugoThemeBootstrap4Blog" $HugoThemeBootstrap4Blog ) }}
 {{ $thanks := i18n "thanks" $links | safeHTML }}
 
