--- a/themes/hugo-bootstrap/layouts/partials/footer.html
+++ b/themes/hugo-bootstrap/layouts/partials/footer.html
@@ -1,3 +1,4 @@
+{{ $Hugo := "<a href=\"https://github.com/Xzya\">Xzya</a>" }}
 {{ $Xzya := "<a href=\"https://github.com/Xzya\">Xzya</a>" }}
 {{ $HugoThemeBootstrap4Blog := "<a href=\"https://github.com/alanorth/hugo-theme-bootstrap4-blog\">hugo-theme-bootstrap4-blog</a>" }}
 {{ $links := (dict "Xzya" $Xzya "HugoThemeBootstrap4Blog" $HugoThemeBootstrap4Blog ) }}
