--- a/themes/hugo-bootstrap/layouts/_default/baseof.html
+++ b/themes/hugo-bootstrap/layouts/_default/baseof.html
@@ -19,7 +19,17 @@
     <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
     {{ end }}
 
-    {{ template "_internal/google_analytics_async.html" . }}
+   <!-- {{ template "_internal/google_analytics_async.html" . }} -->
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-134954108-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-134954108-2');
+</script>
+
 
     {{ partial "head-custom.html" . }}
   </head>
