--- a/themes/bilberry-hugo-theme/layouts/_default/baseof.html
+++ b/themes/bilberry-hugo-theme/layouts/_default/baseof.html
@@ -45,9 +45,9 @@
         {{- else -}}
         <meta property="og:type" content="website">
         {{- end }}
-        <link rel="icon" type="image/png" href="{{ "favicon-32x32.png" | absURL }}" sizes="32x32">
+        <!--<link rel="icon" type="image/png" href="{{ "favicon-32x32.png" | absURL }}" sizes="32x32">
         <link rel="icon" type="image/png" href="{{ "favicon-16x16.png" | absURL }}" sizes="16x16">
-
+        -->
 	{{ if .RelPermalink }}
 	  <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
 	  <link href="{{ .RelPermalink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
