--- a/themes/bilberry-hugo-theme/layouts/_default/baseof.html
+++ b/themes/bilberry-hugo-theme/layouts/_default/baseof.html
@@ -57,8 +57,7 @@
         {{ $theme := resources.Get "sass/theme.scss" }}
         {{ $combined := slice $variables $theme | resources.Concat "sass/combined.scss" | resources.ExecuteAsTemplate "sass/combined.scss" .  }}
         {{ $style := $combined | toCSS | minify | fingerprint }}
-        <link rel="stylesheet" href="{{ $style.Permalink }}">
-        <!--Modified from $style.RelPermalink-->
+        <link rel="stylesheet" href="{{ $style.RelPermalink }}">
 
         {{ partial "twitter-card" . }}
 
