--- a/static/donate/style.css
+++ b/static/donate/style.css
@@ -77,14 +77,14 @@ a {
 	background-color: #fff;
 	border: 1px solid #ddd;
 	border-radius: 6px;
-	width: 299px;
+	width: 160px;
 	height: 28px;
 	float: left;
 	z-index: 1;
 }
 
 #donateBox li {
-	width: 74px;
+	width: 79px;
 	float: left;
 	text-align: center;
 	border-left: 1px solid #ddd;
@@ -168,7 +168,7 @@ a {
 #github {
 	width: 24px;
 	height: 24px;
-	left: calc(50% + 135px);
+	left: calc(50%);
 	top: calc(50% - 30px);
 	background: no-repeat center center url(images/github.svg);
 	background-size: contain;
