--- a/layouts/404.html
+++ b/layouts/404.html
@@ -25,7 +25,7 @@
     {{ end }}
   </ul>
   {{ end }}
-  <iframe src="https://ihoey.github.io/Playing-reward/" style="overflow-x:hidden;overflow-y:hidden; border:0xp none #fff; min-height:240px; width:100%;"  frameborder="0" scrolling="no"></iframe>
+  <iframe src="https://vitoho.ml/404page.html" style="overflow-x:hidden;overflow-y:hidden; border:0xp none #fff; min-height:240px; width:100%;"  frameborder="0" scrolling="no" allowtransparency="true"></iframe>
 
 </div>
 
