--- a/static/404page.css
+++ b/static/404page.css
@@ -45,7 +45,7 @@ body {
   display: inline-block;
   width: 120px;
   height: 120px;
-  background-image: url('../img/emoji.png');
+  background-image: url('../img/emoji_404.png');
   background-size: cover;
   -webkit-transform: scale(1.4);
       -ms-transform: scale(1.4);
