--- a/static/404page.css
+++ b/static/404page.css
@@ -38,7 +38,7 @@ body {
   font-size: 146px;
   font-weight: 700;
   margin: 0px;
-  color: #232323;
+  color: #ffffff;
 }
 
 .notfound .notfound-404 h1>span {
