--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -33,8 +33,8 @@
       {{ partial "section_pager.html" . }}
     </div>
     {{ end }}
-   <!-- <iframe src="{{ .Site.BaseURL | absLangURL }}/donate/" style="overflow-x:hidden;overflow-y:hidden; border:0xp none #fff; min-height:240px; width:100%;"  frameborder="0" scrolling="no" allowtransparency=“true”></iframe>-->
-   {{ partial "donate.html" . }} 
+<iframe src="{{ .Site.BaseURL | absLangURL }}/donate/" style="overflow-x:hidden;overflow-y:hidden; border:0xp none #fff; min-height:240px; width:100%;"  frameborder="0" scrolling="no" allowtransparency=“true”></iframe>
+   <!--{{ partial "donate.html" . }} -->
    {{ partial "comments.html" . }}
 
   </div>
