--- a/static/donate/style.css
+++ b/static/donate/style.css
@@ -11,7 +11,6 @@ body {
 	-webkit-font-smoothing: antialiased;
 	line-height: 1.8em;
 	text-shadow: 0 0 1px rgba(255, 255, 255, 0.1);
-	background: #fff;
 }
 
 img {
@@ -72,7 +71,7 @@ a {
 }
 
 #donateBox {
-	left: calc(50% - 150px);
+	left: calc(50% - 80px);
 	top: calc(50% - 15px);
 	background-color: #fff;
 	border: 1px solid #ddd;
@@ -262,6 +261,7 @@ a {
 #QRBox.fadeIn {
 	display: block;
 	animation: fadeIn 300ms;
+	background-color: transparent;
 }
 
 @keyframes fadeOut {
