--- a/static/donate/style.css
+++ b/static/donate/style.css
@@ -60,7 +60,7 @@ a {
 	height: 70px;
 	line-height: 70px;
 	color:#666;
-	background: #86ffb8 url(images/like.svg) no-repeat center 10px;
+	background: #c9f8c5 url(images/like.svg) no-repeat center 10px;
 	background-size: 20px;
 	border-radius: 35px;
 	text-align: center;
