--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,53 +4,67 @@
 
   {{ partial "page_header.html" . }}
 
-  <div class="article-container">
-
-    {{ if .Params.toc }}
-    <div class="d-none d-xl-block col-xl-2 docs-toc">
-      <ul class="nav toc-top">
-        <li><a href="#" id="back_to_top" class="docs-toc-title">{{ i18n "on_this_page" }}</a></li>
-      </ul>
+  <div class="container-fluid docs">
+    <div class="row flex-xl-nowrap">
+      <div class="col-12 col-md-3 col-xl-2 docs-sidebar">
+        <!--{{ partial "docs_sidebar.html" . }}-->
+      </div>
   
-      {{ .TableOfContents }}
-  
-      {{ partial "docs_toc_foot.html" . }}
-    </div>
-    {{ end }}
-
-    <div class="article-style" itemprop="articleBody">
-      {{ .Content }}
-    </div>
-
-    {{ partial "tags.html" . }}
-
-    {{ if ne .Type "page" }}
-      {{ partial "page_author.html" . }}
-      {{ $related := site.RegularPages.Related . | first 5 }}
-      {{ with $related }}
-      <div class="article-widget">
-        <div class="hr-light"></div>
-        <h3>{{ i18n "related" }}</h3>
-        <ul>
-          {{ range . }}
-          <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
-          {{ end }}
+      {{ if .Params.toc }}
+      <div class="d-none d-xl-block col-xl-2 docs-toc">
+        <ul class="nav toc-top">
+          <li><a href="#" id="back_to_top" class="docs-toc-title">{{ i18n "on_this_page" }}</a></li>
         </ul>
+  
+        {{ .TableOfContents }}
+  
+        {{ partial "docs_toc_foot.html" . }}
       </div>
       {{ end }}
-    {{ end }}
+  
+      <main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 docs-content" role="main">
+  
+        <article class="article" itemscope itemtype="http://schema.org/Article">
+  
+          <div class="docs-article-container">
+            <h1 itemprop="name">{{ .Title }}</h1>
+  
+            <div class="article-style" itemprop="articleBody">
+              {{ .Content }}
+            </div>
+  
+            {{ partial "tags.html" . }}
 
-    {{ if site.Params.section_pager }}
-    <div class="article-widget">
-      {{ partial "section_pager.html" . }}
+            {{ if ne .Type "page" }}
+            {{ partial "page_author.html" . }}
+            {{ $related := site.RegularPages.Related . | first 5 }}
+            {{ with $related }}
+            <div class="article-widget">
+              <div class="hr-light"></div>
+              <h3>{{ i18n "related" }}</h3>
+              <ul>
+                {{ range . }}
+                <li><a href="{{ .RelPermalink }}">{{ .Title }}</a></li>
+                {{ end }}
+              </ul>
+            </div>
+            {{ end }}
+          {{ end }}
+      
+          {{ if site.Params.section_pager }}
+          <div class="article-widget">
+            {{ partial "section_pager.html" . }}
+          </div>
+          {{ end }}
+
+          <iframe src="{{ .Site.BaseURL | absLangURL }}/donate/" style="overflow-x:hidden;overflow-y:hidden; border:0xp none #fff; min-height:240px; width:100%;"  frameborder="0" scrolling="no" allowtransparency=“true”></iframe>
+          <!--{{ partial "donate.html" . }} -->
+          {{ partial "comments.html" . }}
+
+          </div>
+        </article>
+      </main>
     </div>
-    {{ end }}
-
-<iframe src="{{ .Site.BaseURL | absLangURL }}/donate/" style="overflow-x:hidden;overflow-y:hidden; border:0xp none #fff; min-height:240px; width:100%;"  frameborder="0" scrolling="no" allowtransparency=“true”></iframe>
-   <!--{{ partial "donate.html" . }} -->
-   {{ partial "comments.html" . }}
-
   </div>
-</article>
 
 {{- end -}}
