--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,6 +4,7 @@
 
   {{ partial "page_header.html" . }}
 
+  <div class="row flex-xl-nowrap">
   <div class="article-container">
     <div class="article-style" itemprop="articleBody">
       {{ .Content }}
@@ -48,7 +49,7 @@
      {{ partial "docs_toc_foot.html" . }}
    </div>
    {{ end }}
-   
+  </div>
   </div>
 </article>
 
