--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,7 +3,7 @@
 <article class="article" itemscope itemtype="http://schema.org/Article">
 
   {{ partial "page_header.html" . }}
-
+<div class="container-fluid docs">
   <div class="row flex-xl-nowrap">
   <div class="article-container">
     <div class="article-style" itemprop="articleBody">
@@ -49,6 +49,7 @@
      {{ partial "docs_toc_foot.html" . }}
    </div>
    {{ end }}
+  </div>
   </div>
   </div>
 </article>
