--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -35,7 +35,7 @@
 
   <iframe src="{{ .Site.BaseURL | absLangURL }}/donate/" style="overflow-x:hidden;overflow-y:hidden; border:0xp none #fff; min-height:240px; width:100%;"  frameborder="0" scrolling="no" allowtransparency=“true”></iframe>
    <!--{{ partial "donate.html" . }} -->
-   {{ partial "comments.html" . }}
+   <!--{{ partial "comments.html" . }}-->
   
   </div>
 </article>
