--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,7 +7,7 @@
   <div class="article-container">
     <div class="article-style" itemprop="articleBody">
       {{ .Content }}
-      <p>-End of all, type with :heart:-</p> 
+      <p>- End of all, type with ❤️ -</p> 
     </div>
 
     {{ partial "tags.html" . }}
