--- a/layouts/partials/widgets/links.html
+++ b/layouts/partials/widgets/links.html
@@ -1,7 +1,10 @@
+{{ $ := .root }}
+{{ $page := .page }}
+
 <div class="row">
     <div class="col-12 col-lg-4 section-heading">
-      <h1>{{ with $st.Title }}{{ . | markdownify | emojify }}{{ end }}</h1>
-      {{ with $st.Params.subtitle }}<p>{{ . | markdownify | emojify }}</p>{{ end }}
+        <h1>{{ with $page.Title }}{{ . | markdownify | emojify }}{{ end }}</h1>
+        {{ with $page.Params.subtitle }}<p>{{ . | markdownify | emojify }}</p>{{ end }}
     </div>
 
         {{ .page.Content }}
