--- a/layouts/partials/widgets/links.html
+++ b/layouts/partials/widgets/links.html
@@ -6,7 +6,10 @@
         <h1>{{ with $page.Title }}{{ . | markdownify | emojify }}{{ end }}</h1>
         {{ with $page.Params.subtitle }}<p>{{ . | markdownify | emojify }}</p>{{ end }}
     </div>
+    <div class="col-12 col-lg-8">
 
         {{ .page.Content }}
+    
+    </div>
 
   </div>
