--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -10,9 +10,9 @@
       <p>- End of all, type with ❤️ -</p> 
     </div>
 
-    <a href='https://www.stat-counter.org/'>Hit and Visitor Statistics</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c08441873cc897a68d25774d77c17abac3ac6cbd'></script>
+<script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c08441873cc897a68d25774d77c17abac3ac6cbd'></script>
     <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/553192/t/3"></script>
-    
+
     {{ partial "tags.html" . }}
 
     {{ if ne .Type "page" }}
