--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,10 +4,10 @@
 
   {{ partial "page_header.html" . }}
 
-  <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c08441873cc897a68d25774d77c17abac3ac6cbd'></script>
-  <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/553192/t/3"></script>
-
   <div class="article-container">
+    Visitor Count:
+    <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c08441873cc897a68d25774d77c17abac3ac6cbd'></script>
+    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/553192/t/3"></script>
     <div class="article-style" itemprop="articleBody">
       {{ .Content }}
       <p>- End of all, type with ❤️ -</p> 
