--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,9 +5,9 @@
   {{ partial "page_header.html" . }}
 
   <div class="article-container">
-    <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=c08441873cc897a68d25774d77c17abac3ac6cbd'></script>
+    
     Visitor Count:
-    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/553192/t/3"></script>
+    <script type="text/javascript" src="//counter.websiteout.net/js/2/0/0/1"></script>
     <div class="article-style" itemprop="articleBody">
       {{ .Content }}
       <p>- End of all, type with ❤️ -</p> 
