--- a/layouts/partials/share.html
+++ b/layouts/partials/share.html
@@ -19,4 +19,4 @@
 </div>
 {{ end }}
 <div style="float:left;">Vistor countor:</div>
-<div style="float:left;"><script type="text/javascript" src="//counter.websiteout.net/js/2/0/0/0"></script></div>
+<div style="float:left;"><script type="text/javascript" src="//counter.websiteout.net/js/2/0/0/0">&nbsp;</script></div>
