--- a/layouts/partials/share.html
+++ b/layouts/partials/share.html
@@ -18,5 +18,5 @@
   </ul>
 </div>
 {{ end }}
-<div style="float:left;">Vistor countor:</div>
+<div style="float:left;">Visits:</div>
 <div style="float:left;"><script type="text/javascript" src="//counter.websiteout.net/js/2/0/0/0">&nbsp;</script></div>
