--- a/layouts/partials/share.html
+++ b/layouts/partials/share.html
@@ -20,4 +20,4 @@
 {{ end }}
 <div style="float:left;">Visit:</div>
 <div style="float:left;"><script type="text/javascript" src="//counter.websiteout.net/js/2/0/0/0"></script></div>
-<br>
+<div style="float:left;"><br></div>
