--- a/layouts/partials/share.html
+++ b/layouts/partials/share.html
@@ -19,5 +19,5 @@
 </div>
 {{ end }}
 <div style="display:inline;">Visit:</div>
-<div style="float:left;"><script type="text/javascript" src="//counter.websiteout.net/js/2/0/0/0"></script></div>
+<div style="display:inline;"><script type="text/javascript" src="//counter.websiteout.net/js/2/0/0/0"></script></div>
 <div style="float:left;"><br></div>
