--- a/layouts/partials/share.html
+++ b/layouts/partials/share.html
@@ -1,4 +1,3 @@
-<img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits">
 {{ if and site.Params.sharing (ne .Params.share false) }}
 <div class="share-box" aria-hidden="true">
   <ul class="share">
@@ -19,3 +18,5 @@
   </ul>
 </div>
 {{ end }}
+
+<div style="float: left;"><img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits"></div>
