--- a/layouts/partials/share.html
+++ b/layouts/partials/share.html
@@ -19,5 +19,5 @@
 </div>
 {{ end }}
 
-<div style="float: left;"><img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits"></div>
-<div style="float: left;">&nbsp;&nbsp;</div>
+<div style="float: left; margin-right: 2px"><img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits"></div>
+
