--- a/layouts/partials/share.html
+++ b/layouts/partials/share.html
@@ -19,5 +19,5 @@
 </div>
 {{ end }}
 
-<div style="float: left;margin-right:10px;margin-top:6px;"><img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits" width="64"></div>
+<div style="float: left;margin-right:10px;margin-top:6px;"><img src="https://hitcounter.pythonanywhere.com/count/tag.svg" alt="Hits" style="height:12px;"></div>
 
