--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -38,11 +38,12 @@
    <!--{{ partial "donate.html" . }} -->
    <!--{{ partial "comments.html" . }}-->
    <script src='//unpkg.com/valine/dist/Valine.min.js'></script>
+   <div id="vcomments"></div>
    <script>
     new Valine({
         el: '#vcomments',
-        appId: '<API_ID>',
-        appKey: '<API_Key>'
+        appId: 'EhITe2H0uExeHtQH5ogHFSQL-MdYXbMMI',
+        appKey: 'O3ec8q8S5TNym4tBcIvwxSIp'
     })
    </script>
   
