--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -43,6 +43,7 @@
    <script>
     new Valine({
         el: '#vcomment',
+        lang: 'en',
         appId: 'EhITe2H0uExeHtQH5ogHFSQL-MdYXbMMI',
         appKey: 'O3ec8q8S5TNym4tBcIvwxSIp'
     })
