--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -44,6 +44,7 @@
     new Valine({
         el: '#vcomment',
         lang: 'en',
+        verify: true,
         appId: 'EhITe2H0uExeHtQH5ogHFSQL-MdYXbMMI',
         appKey: 'O3ec8q8S5TNym4tBcIvwxSIp'
     })
