--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -46,7 +46,8 @@
         lang: 'en',
         verify: true,
         appId: 'EhITe2H0uExeHtQH5ogHFSQL-MdYXbMMI',
-        appKey: 'O3ec8q8S5TNym4tBcIvwxSIp'
+        appKey: 'O3ec8q8S5TNym4tBcIvwxSIp',
+        placeholder: 'Write a Comment'
     })
    </script>
   
